@@ -1,3 +1,11 @@
+Mon May 17 16:41:18 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>
+
+	* t/batch.t: added simple testing of StartJob, QueueCommand,
+ 	QueueCommands, and FinishJob.  No testing of synchronization, yet.
+
+	* MNI/Batch.pm (QueueCommands): StartBatchJob --> StartJob typo
+ 	fixed.  Expand documentation; all options documented.
+
 Thu May 13 19:33:40 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>
 
 	* t/batch.t: new file.  Start of MNI::Batch regression tests.
